# instruction_machine

./: CMakeLists.txt  InstructionMachine.bash  Machine.cpp  Machine.h  README.md  instruction.txt  main.cpp
